labeling python file

--- a/notebooks/labeling.ipynb
+++ b/notebooks/labeling.ipynb
@@ -453,11 +453,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "422b4c7c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the updated labeled dataset to a file in CoNLL format\n",
+    "labeled_data_birr_path = '../data/labeled_telegram_product_price_location.txt-'\n",
+    "with open(labeled_data_birr_path, 'w', encoding='utf-8') as f:\n",
+    "    for index, row in df.iterrows():\n",
+    "        f.write(f\"{row['Labeled_Message']}\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f0b41357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeled data saved to ../data/@Shageonlinestore_labeled_data.conll\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the labeled data to a .conll file\n",
+    "conll_file_path = '../data/@Shageonlinestore_labeled_data.conll'\n",
+    "with open(conll_file_path, 'w', encoding='utf-8') as f:\n",
+    "    for labeled_message in df['Labeled_Message']:\n",
+    "        f.write(f\"{labeled_message}\\n\\n\")\n",
+    "\n",
+    "print(f\"Labeled data saved to {conll_file_path}\")"
+   ]
   }
  ],
  "metadata": {
